<resources>
    <string name="app_name">Blaze Wallpaper</string>
    <string name="title_activity_navigation_">Navigation_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="tab1_text">New</string>
    <string name="tab2_item">Top Rated</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_a_image">This is a image</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="set_image">Set Image</string>
    <string name="downlaod">Download</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="should_favourite_images_placed_on_home_screen">Should Favourite Images Placed On Home Screen</string>
    <string name="add_to_home_screen">Add to Home Screen</string>
    <string name="banner_ad_unit_id">ca-app-pub-3615799090878139/9515720490</string>
    <string name="transition_name">image_transition</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="favourite_images">Favourite Images</string>
    <string name="favourites_text">Favourites</string>
    <string name="wallpaperimages">WallpaperImages</string>
    <string name="get_started">Get Started</string>
    <string name="removeads">RemoveAds</string>
    <string name="author_name">Author Name:</string>
    <string name="portfolio_name">Portfolio Url:</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="homescreen">HomeScreen</string>
    <string name="lockscreen">LockScreen</string>
</resources>
