<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.BigImageDisplay">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/image_loading" />


        <ImageView
            android:id="@+id/bigImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/this_is_a_image"
            android:scaleType="centerCrop"
            android:transitionName="@string/transition_name" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/swipe_right_animation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/swipe" />
        </FrameLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            app:lottie_rawRes="@raw/heart" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end">

            <LinearLayout
                android:id="@+id/down_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:alpha="0.7"
                android:background="@android:color/black"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/home_screen_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="55dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="true"
                    android:contentDescription="@string/homescreen"
                    android:focusable="true"
                    android:src="@drawable/home"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/lock_screen_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="100dp"
                    android:clickable="true"
                    android:contentDescription="@string/lockscreen"
                    android:focusable="true"
                    android:src="@drawable/lock"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/download_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/downlaod" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/set_image" />


            </LinearLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView_big"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/down_linear"
                android:layout_centerInParent="true"
                ads:adUnitId="@string/banner_ad_unit_id"
                app:adSize="BANNER" />

        </RelativeLayout>

    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>